# erobs

.devcontainer/: Dockerfile
data/mask/1713559146/: metadata.csv
docker/azure-kinect/: README.md
docker/erobs-common-img/: Dockerfile
docker/image-mask-sam/: Dockerfile  README.md  sam_color_select_mask.py  sam_holder_mask.py  sam_mask_as_input.py
docs/: STATE_FLOW.md
src/hello_moveit/: CMakeLists.txt  package.xml
src/hello_moveit/launch/: move_to_pose.launch.py
src/hello_moveit/src/: move_to_pose.cpp
src/kinect_recorder/: CMakeLists.txt  package.xml
src/kinect_recorder/include/kinect_recorder/: kinect_recorder.hpp
src/kinect_recorder/src/: kinect_recorder.cpp
src/pdf_beamtime/include/pdf_beamtime/: pdf_beamtime_server.hpp
src/pdf_beamtime/src/: pdf_beamtime_fidpose_server.cpp  pdf_beamtime_server.cpp
src/pdf_beamtime_interfaces/: CMakeLists.txt
src/pdf_beamtime_interfaces/srv/: EstimatedPoseMsg.srv
src/pose_estimator/: CMakeLists.txt  package.xml
src/pose_estimator/include/pose_estimator/: kalman_filter.hpp  pose_estimator.hpp
src/pose_estimator/launch/: image_proc_mapping.launch.py  test_urdf.launch.py
src/pose_estimator/src/: kalman_filter.cpp  pose_estimator.cpp
src/ur3e_hande_moveit_config/: CMakeLists.txt
src/ur3e_hande_moveit_config/launch/: ur_moviet_debug.launch.py
src/ur3e_hande_robot_description/: README.md
src/ur3e_hande_robot_description/urdf/: hande.xacro  ur_with_2f85.xacro  ur_with_hande.xacro
